--- a/terminator.config
+++ b/terminator.config
@@ -14,6 +14,6 @@ cursor_shape = "block"
 cursor_blink = True
 
 [keybindings]
-#split_horiz = <Ctrl>h
-#split_vert = <Ctrl>v
+split_horiz = <Alt>h
+split_vert = <Alt>v
 
