clean auto-generated terminator config

--- a/terminator.config
+++ b/terminator.config
@@ -1,22 +1,10 @@
-[global_config]
+use_system_font = False
+background_darkness = 0.49
+foreground_color = "#ffffff"
+titlebars = False
+font = Inconsolata 12
+cursor_blink = False
+
 [keybindings]
-  split_horiz = <Alt>h
-  split_vert = <Alt>v
-[profiles]
-  [[default]]
-    use_system_font = False
-    background_darkness = 0.49
-    foreground_color = "#ffffff"
-    show_titlebar = False
-    font = Inconsolata 12
-    cursor_blink = False
-[layouts]
-  [[default]]
-    [[[child1]]]
-      type = Terminal
-      parent = window0
-      profile = default
-    [[[window0]]]
-      type = Window
-      parent = ""
-[plugins]
+    split_horiz = <Alt>h
+    split_vert = <Alt>v
