--- a/terminator.config
+++ b/terminator.config
@@ -1,8 +1,16 @@
-use_system_font = False
-background_darkness = 0.49
-foreground_color = "#ffffff"
-font = Inconsolata 12
-
+[global_config]
 [keybindings]
-    split_horiz = <Alt>h
-    split_vert = <Alt>v
+  split_horiz = <Alt>h
+  split_vert = <Alt>v
+[profiles]
+  [[default]]
+[layouts]
+  [[default]]
+    [[[child1]]]
+      profile = default
+      type = Terminal
+      parent = window0
+    [[[window0]]]
+      type = Window
+      parent = ""
+[plugins]
