terminator: set font Inconsolata

--- a/terminator.config
+++ b/terminator.config
@@ -4,6 +4,10 @@
   split_vert = <Alt>v
 [profiles]
   [[default]]
+    use_system_font = False
+    font = Inconsolata Medium 14
+    background_color = "#300a24"
+    foreground_color = "#ffffff"
 [layouts]
   [[default]]
     [[[child1]]]
